--- a/I2CAnalogClock/.project
+++ b/I2CAnalogClock/.project
@@ -37,9 +37,9 @@
 			<location>/Users/liebman/src/PinChangeInterrupt</location>
 		</link>
 		<link>
-			<name>TinyWireS</name>
+			<name>USIWire</name>
 			<type>2</type>
-			<location>/Users/liebman/src/TinyWire/TinyWireS</location>
+			<location>/Users/liebman/src/USIWire</location>
 		</link>
 		<link>
 			<name>core/core</name>
