major refactor of NTP code, now includes NTPTest framework to allow NTP debugging on MacOS/unix

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,13 @@
 .metadata
 .DS_Store
 .ino.cpp
+*/.project
+*/.cproject
+*/.settings
 I2CAnalogClock/I2CAnalogClock.ino
-I2CAnalogClock/.project
-I2CAnalogClock/.cproject
-I2CAnalogClock/.settings
 SynchroClock/SynchroClock.ino
-SynchroClock/.project
-SynchroClock/.cproject
-SynchroClock/.settings
 */Release
+*/Debug
 */libraries
 */core
 *.bak
