SynchroClock works with platformio

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 */.project
 */.cproject
 */.settings
+*/.pioenvs/
+*/.piolibdeps/
 */spec.d
 I2CAnalogClock/I2CAnalogClock.ino
 SynchroClock/SynchroClock.ino
