testing travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,8 +47,8 @@ before_install:
   - install_library "https://github.com/tzapu/WiFiManager.git" "development"
   - install_library "PinChangeInterrupt"
 
-  - ls -l "$APPLICATION_FOLDER"
-  - ls -l "$SKETCHBOOK_FOLDER"
+  - ls -la "${APPLICATION_FOLDER}/"
+  - ls -la "${SKETCHBOOK_FOLDER}/"
 
   # make it look like a sketch for arduino
   - touch "${I2CANALOGCLOCK_DIR}/I2CAnalogClock.ino"
