--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,8 @@ before_install:
 
   - ls -la "${APPLICATION_FOLDER}/"
   - ls -la "${APPLICATION_FOLDER}/arduino/"
+  - ls -la "${APPLICATION_FOLDER}/arduino/hardware/"
+  - ls -la "${APPLICATION_FOLDER}/arduino/hardware/ATTinyCore"
   - ls -la "${SKETCHBOOK_FOLDER}/"
 
   # make it look like a sketch for arduino
@@ -57,9 +59,9 @@ before_install:
 
   # install platformio
   - sudo pip install -U platformio
-  - platformio platform  install atmelavr --with-package framework-arduinoavr
-  - cp -rp "${SKETCHBOOK_FOLDER}/hardware/ATTinyCore/avr/variants/tinyX5" "${HOME}/.platformio/packages/framework-arduinoavr/variants/."
-  - platformio platform  install espressif8266 --with-package framework-arduinoespressif8266
+  - platformio platform  install "https://github.com/platformio/platform-atmelavr.git#develop" --with-package framework-arduinoavr
+  - cp -rp "${APPLICATION_FOLDER}/arduino/hardware/ATTinyCore/avr/variants/tinyX5" "${HOME}/.platformio/packages/framework-arduinoavr/variants/."
+  - platformio platform  install "https://github.com/platformio/platform-espressif8266.git#feature/stage" --with-package framework-arduinoespressif8266
 
 script:
   # build with arduino
