--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
-language: c
-sudo: required
+language: python
+  - "2.7"
+
+sudo: false
+cache:
+    directories:
+        - "~/.platformio"
 
 env:
   global:
@@ -48,8 +53,9 @@ before_install:
   - install_library "PinChangeInterrupt"
 
   - ls -la "${HOME}/"
+  - ls -la "${HOME}/Arduino"
   - ls -la "${SKETCHBOOK_FOLDER}/"
-  - ls -la "${SKETCHBOOK_FOLDER}/hardware/"
+  - ls -la "${APPLICATION_FOLDER}/"
   - ls -la "${APPLICATION_FOLDER}/arduino/"
 
   # make it look like a sketch for arduino
@@ -57,7 +63,7 @@ before_install:
   - touch "${SYNCROCLOCK_DIR}/SynchroClock.ino"
 
   # install platformio
-  - sudo pip install -U platformio
+  - pip install -U platformio
   - platformio platform  install "https://github.com/platformio/platform-atmelavr.git#develop" --with-package framework-arduinoavr
   - cp -rp "${SKETCHBOOK_FOLDER}/hardware/ATTinyCore/avr/variants/tinyX5" "${HOME}/.platformio/packages/framework-arduinoavr/variants/."
   - platformio platform  install "https://github.com/platformio/platform-espressif8266.git#feature/stage" --with-package framework-arduinoespressif8266
