--- a/.travis.yml
+++ b/.travis.yml
@@ -52,12 +52,6 @@ before_install:
   - install_library "https://github.com/tzapu/WiFiManager.git" "development"
   - install_library "PinChangeInterrupt"
 
-  - ls -la "${HOME}/"
-  - ls -la "${HOME}/Arduino"
-  - ls -la "${SKETCHBOOK_FOLDER}/"
-  - ls -la "${APPLICATION_FOLDER}/"
-  - ls -la "${APPLICATION_FOLDER}/arduino/"
-
   # make it look like a sketch for arduino
   - touch "${I2CANALOGCLOCK_DIR}/I2CAnalogClock.ino"
   - touch "${SYNCROCLOCK_DIR}/SynchroClock.ino"
@@ -65,8 +59,9 @@ before_install:
   # install platformio
   - sudo pip install -U platformio
   - platformio platform  install "https://github.com/platformio/platform-atmelavr.git#develop" --with-package framework-arduinoavr
-  - cp -rp "${SKETCHBOOK_FOLDER}/hardware/ATTinyCore/avr/variants/tinyX5" "${HOME}/.platformio/packages/framework-arduinoavr/variants/."
   - platformio platform  install "https://github.com/platformio/platform-espressif8266.git#feature/stage" --with-package framework-arduinoespressif8266
+  # hack for missing varient in platformio!
+  - cp -rp "${HOME}/.arduino15/packages/ATTinyCore/avr/variants/tinyX5" "${HOME}/.platformio/packages/framework-arduinoavr/variants/."
 
 script:
   # build with arduino
