Build with platformio (#12)
Include platformio builds as part of CI. This is a first step to adding release generation from travis builds.

--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,15 @@
 */.project
 */.cproject
 */.settings
+*/.pioenvs/
+*/.piolibdeps/
 */spec.d
 I2CAnalogClock/I2CAnalogClock.ino
 SynchroClock/SynchroClock.ino
 */Release
 */Debug
 */libraries
+*/lib
 */core
 *.bak
 *-bak
