use a modified fork of the arduino platformio framework to get updated ATTiny support

--- a/I2CAnalogClock/platformio.ini
+++ b/I2CAnalogClock/platformio.ini
@@ -3,7 +3,7 @@ env_default = synchroclock
 src_dir = .
 
 [env:synchroclock]
-platform = https://github.com/platformio/platform-atmelavr.git#develop
+platform = https://github.com/liebman/platform-atmelavr.git#update-attinycore-version
 framework = arduino
 board = I2CAnalogClock
 lib_deps =
