fix hardware folder for arduino build on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ before_install:
   - git submodule update --init --recursive
   - cd hardware/esp8266/tools
   - ./get.py
+  - cd "${TRAVIS_BUILD_DIR}/hardware"
+  - ln -s esp8266 esp8266com
   - cd "${HOME}"
   # setup arduino-ci-script
   - git clone https://github.com/per1234/arduino-ci-script.git "${HOME}/scripts"
