--- a/.travis.yml
+++ b/.travis.yml
@@ -16,14 +16,7 @@ before_install:
   - echo HOME is "'${HOME}'"
   - id
   - cd "${TRAVIS_BUILD_DIR}"
-  - git submodule update --init --recursive
-  - cd hardware/esp8266/tools
-  - ./get.py
-  - cd "${TRAVIS_BUILD_DIR}/hardware"
-  - mkdir esp8266com
-  - cd esp8266com
-  - ln -s ../esp8266 .
-  - cd "${HOME}"
+  - ./update.sh
   # setup arduino-ci-script
   - git clone https://github.com/per1234/arduino-ci-script.git "${HOME}/scripts"
   - cd "${HOME}/scripts"
