--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,10 @@
-.metadata
 .DS_Store
-.ino.cpp
-*/.project
-*/.cproject
-*/.settings
-*/.pioenvs/
-*/.piolibdeps/
-*/spec.d
-I2CAnalogClock/I2CAnalogClock.ino
-SynchroClock/SynchroClock.ino
+AnalogClock.code-workspace
 SynchroClock/data
-*/Release
-*/Debug
-*/libraries
-*/lib
-*/core
+.pio
+.vscode
 *.bak
 *-bak
-RemoteSystemsTempFiles
 eagle/SynchroClock/SynchroClock.pro
 eagle/SynchroClock/SynchroClock.b#*
 eagle/SynchroClock/SynchroClock.l#*
