add platformio fuse setting and correct cpu freq for attiny85

--- a/I2CAnalogClock/platformio.ini
+++ b/I2CAnalogClock/platformio.ini
@@ -1,8 +1,20 @@
-[env]
-build_flags = -D__AVR_ATtiny85__
+[platformio]
+default_envs = default
 
-[env:default]
+[env]
+board = attiny85
 platform = atmelavr@1.14.0
 framework = arduino
-board = attiny85
+build_flags = -D__AVR_ATtiny85__
+; we run at 1Mhz
+board_build.f_cpu = 1000000L
 
+[env:default]
+; fuses for 1Mhz/bod=1.8/EESAVE/RSTDISABLE
+board_fuses.hfuse = 0x56
+board_fuses.lfuse = 0x62
+
+[env:testing]
+; fuses for 1Mhz/bod=1.8/EESAVE
+board_fuses.hfuse = 0xd6
+board_fuses.lfuse = 0x62
