--- a/I2CAnalogClock/platformio.ini
+++ b/I2CAnalogClock/platformio.ini
@@ -8,6 +8,8 @@ framework = arduino
 build_flags = -D__AVR_ATtiny85__
 ; we run at 1Mhz
 board_build.f_cpu = 1000000L
+lib_deps =
+    https://github.com/NicoHood/PinChangeInterrupt.git#ed1c1f4 ;#bd868ad
 
 [env:default]
 ; fuses for 1Mhz/bod=1.8/EESAVE/RSTDISABLE
