--- a/SynchroClock/platformio.ini
+++ b/SynchroClock/platformio.ini
@@ -16,6 +16,12 @@ build_flags =
   -DBEARSSL_SSL_BASIC
   -DVTABLES_IN_FLASH
 monitor_speed = 76800
+lib_deps =
+  https://github.com/liebman/DLog.git
+  https://github.com/liebman/DLogNet.git
+  https://github.com/tzapu/WiFiManager.git#e25277b
+  https://github.com/arcao/Syslog.git#e9c2eea
+extra_scripts = post:mkdata.py
 
 [env:default]
 platform = espressif8266@2.2.2
