add workaround to prevent flash erase when using the platformio fuses target

--- a/I2CAnalogClock/platformio.ini
+++ b/I2CAnalogClock/platformio.ini
@@ -3,13 +3,13 @@ default_envs = default
 
 [env]
 board = attiny85
-platform = atmelavr@1.14.0
+platform = atmelavr@1.15.0
 framework = arduino
 build_flags = -D__AVR_ATtiny85__
-; we run at 1Mhz
-board_build.f_cpu = 1000000L
+board_build.f_cpu = 1000000L ; we run at 1Mhz
 lib_deps =
-    https://github.com/NicoHood/PinChangeInterrupt.git#ed1c1f4 ;#bd868ad
+    https://github.com/NicoHood/PinChangeInterrupt.git#ed1c1f4 ; current head as of Jul 27, 2019
+extra_scripts=fuses.py ; fix fuses target not to erase flash!
 
 [env:default]
 ; fuses for 1Mhz/bod=1.8/EESAVE/RSTDISABLE
