set default timechange settings from platformio.ini via build_flags

--- a/SynchroClock/platformio.ini
+++ b/SynchroClock/platformio.ini
@@ -1,5 +1,5 @@
 [platformio]
-default_envs = default
+default_envs = la
 
 [env]
 board = esp12e
@@ -10,7 +10,7 @@ board_build.f_cpu = 80000000L
 board_build.f_flash = 40000000L
 board_build.flash_mode = qio
 build_flags =
-  -Wall
+  -Wall -Wextra -Werror
   -Wl,-Teagle.flash.4m1m.ld
   -DPIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY_LOW_FLASH
   -DBEARSSL_SSL_BASIC
@@ -22,13 +22,116 @@ lib_deps =
   https://github.com/tzapu/WiFiManager.git#e25277b
   https://github.com/arcao/Syslog.git#e9c2eea
 extra_scripts = post:mkdata.py
-
-[env:default]
 platform = espressif8266@2.2.2
 
+[env:la]
+build_flags = ${env.build_flags}
+  -DDEFAULT_TC0_OCCUR=2
+  -DDEFAULT_TC0_DOW=0
+  -DDEFAULT_TC0_DOFF=0
+  -DDEFAULT_TC0_MONTH=3
+  -DDEFAULT_TC0_HOUR=2
+  -DDEFAULT_TC0_OFFSET=-25200
+  -DDEFAULT_TC1_OCCUR=1
+  -DDEFAULT_TC1_DOW=0
+  -DDEFAULT_TC1_DOFF=0
+  -DDEFAULT_TC1_MONTH=11
+  -DDEFAULT_TC1_HOUR=2
+  -DDEFAULT_TC1_OFFSET=-28800
+
+[env:nyc]
+build_flags = ${env.build_flags}
+  -DDEFAULT_TC0_OCCUR=2
+  -DDEFAULT_TC0_DOW=0
+  -DDEFAULT_TC0_DOFF=0
+  -DDEFAULT_TC0_MONTH=3
+  -DDEFAULT_TC0_HOUR=2
+  -DDEFAULT_TC0_OFFSET=-14400
+  -DDEFAULT_TC1_OCCUR=1
+  -DDEFAULT_TC1_DOW=0
+  -DDEFAULT_TC1_DOFF=0
+  -DDEFAULT_TC1_MONTH=11
+  -DDEFAULT_TC1_HOUR=2
+  -DDEFAULT_TC1_OFFSET=-18000
+
+[env:bkk]
+build_flags = ${env.build_flags}
+  -DDEFAULT_TC0_OCCUR=1
+  -DDEFAULT_TC0_DOW=0
+  -DDEFAULT_TC0_DOFF=0
+  -DDEFAULT_TC0_MONTH=0
+  -DDEFAULT_TC0_HOUR=0
+  -DDEFAULT_TC0_OFFSET=25200
+  -DDEFAULT_TC1_OCCUR=1
+  -DDEFAULT_TC1_DOW=0
+  -DDEFAULT_TC1_DOFF=0
+  -DDEFAULT_TC1_MONTH=0
+  -DDEFAULT_TC1_HOUR=0
+  -DDEFAULT_TC1_OFFSET=25200
+
+[env:uk]
+build_flags = ${env.build_flags}
+  -DDEFAULT_TC0_OCCUR=-1
+  -DDEFAULT_TC0_DOW=0
+  -DDEFAULT_TC0_DOFF=0
+  -DDEFAULT_TC0_MONTH=3
+  -DDEFAULT_TC0_HOUR=1
+  -DDEFAULT_TC0_OFFSET=3600
+  -DDEFAULT_TC1_OCCUR=-1
+  -DDEFAULT_TC1_DOW=0
+  -DDEFAULT_TC1_DOFF=0
+  -DDEFAULT_TC1_MONTH=10
+  -DDEFAULT_TC1_HOUR=2
+  -DDEFAULT_TC1_OFFSET=0
+
+[env:tlv]
+build_flags = ${env.build_flags}
+  -DDEFAULT_TC0_OCCUR=-1
+  -DDEFAULT_TC0_DOW=0
+  -DDEFAULT_TC0_DOFF=-2
+  -DDEFAULT_TC0_MONTH=3
+  -DDEFAULT_TC0_HOUR=2
+  -DDEFAULT_TC0_OFFSET=10800
+  -DDEFAULT_TC1_OCCUR=-1
+  -DDEFAULT_TC1_DOW=0
+  -DDEFAULT_TC1_DOFF=0
+  -DDEFAULT_TC1_MONTH=10
+  -DDEFAULT_TC1_HOUR=2
+  -DDEFAULT_TC1_OFFSET=7200
+
+# warning: esp12s maybe non-functional
+[env:esp12s]
+platform = espressif8266@2.2.2
+board_build.flash_mode = dio
+build_flags = ${env.build_flags}
+  -DDEFAULT_TC0_OCCUR=2
+  -DDEFAULT_TC0_DOW=0
+  -DDEFAULT_TC0_DOFF=0
+  -DDEFAULT_TC0_MONTH=3
+  -DDEFAULT_TC0_HOUR=2
+  -DDEFAULT_TC0_OFFSET=-25200
+  -DDEFAULT_TC1_OCCUR=1
+  -DDEFAULT_TC1_DOW=0
+  -DDEFAULT_TC1_DOFF=0
+  -DDEFAULT_TC1_MONTH=11
+  -DDEFAULT_TC1_HOUR=2
+  -DDEFAULT_TC1_OFFSET=-28800
+
 [env:staging]
-build_flags = ${env.build_flags} -DUSE_CERT_STORE
 platform = https://github.com/platformio/platform-espressif8266.git#feature/stage
 platform_packages =
   ; use upstream Git version
   framework-arduinoespressif8266 @ https://github.com/esp8266/Arduino.git
+build_flags = ${env.build_flags} -DUSE_CERT_STORE
+  -DDEFAULT_TC0_OCCUR=2
+  -DDEFAULT_TC0_DOW=0
+  -DDEFAULT_TC0_DOFF=0
+  -DDEFAULT_TC0_MONTH=3
+  -DDEFAULT_TC0_HOUR=2
+  -DDEFAULT_TC0_OFFSET=-25200
+  -DDEFAULT_TC1_OCCUR=1
+  -DDEFAULT_TC1_DOW=0
+  -DDEFAULT_TC1_DOFF=0
+  -DDEFAULT_TC1_MONTH=11
+  -DDEFAULT_TC1_HOUR=2
+  -DDEFAULT_TC1_OFFSET=-28800
