--- a/SynchroClock/platformio.ini
+++ b/SynchroClock/platformio.ini
@@ -1,7 +1,7 @@
 [platformio]
 default_envs = la
 extra_configs =
-  local.ini # can be used for localized envs
+  local.ini ; can be used for localized envs
 
 [env]
 board = esp12e
@@ -17,6 +17,7 @@ build_flags =
   -DPIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY_LOW_FLASH
   -DBEARSSL_SSL_BASIC
   -DVTABLES_IN_FLASH
+; -DNTP_REQUEST_COUNT=1
 monitor_speed = 76800
 lib_deps =
   https://github.com/liebman/DLog.git
@@ -100,24 +101,6 @@ build_flags = ${env.build_flags}
   -DDEFAULT_TC1_MONTH=10
   -DDEFAULT_TC1_HOUR=2
   -DDEFAULT_TC1_OFFSET=7200
-
-# warning: esp12s maybe non-functional
-[env:esp12s]
-platform = espressif8266@2.2.2
-board_build.flash_mode = dio
-build_flags = ${env.build_flags}
-  -DDEFAULT_TC0_OCCUR=2
-  -DDEFAULT_TC0_DOW=0
-  -DDEFAULT_TC0_DOFF=0
-  -DDEFAULT_TC0_MONTH=3
-  -DDEFAULT_TC0_HOUR=2
-  -DDEFAULT_TC0_OFFSET=-25200
-  -DDEFAULT_TC1_OCCUR=1
-  -DDEFAULT_TC1_DOW=0
-  -DDEFAULT_TC1_DOFF=0
-  -DDEFAULT_TC1_MONTH=11
-  -DDEFAULT_TC1_HOUR=2
-  -DDEFAULT_TC1_OFFSET=-28800
 
 [env:staging]
 platform = https://github.com/platformio/platform-espressif8266.git#feature/stage
