Add a 10ms delay to Syslog messages to hopefully loose less Use platform 2.2.3 Use defines for various intervals that can be overridden with compile options attemp to disable lwip ntp with sntp_servermode_dhcp(0) Update version to 1.1.7

--- a/SynchroClock/platformio.ini
+++ b/SynchroClock/platformio.ini
@@ -17,7 +17,8 @@ build_flags =
   -DPIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY_LOW_FLASH
   -DBEARSSL_SSL_BASIC
   -DVTABLES_IN_FLASH
-; -DNTP_REQUEST_COUNT=1
+  -DDLOG_SYSLOG_DELAY=10
+; -DNTP_REQUEST_COUNT=3
 monitor_speed = 76800
 lib_deps =
   https://github.com/liebman/DLog.git
@@ -25,7 +26,7 @@ lib_deps =
   https://github.com/tzapu/WiFiManager.git#e25277b
   https://github.com/arcao/Syslog.git#e9c2eea
 extra_scripts = post:mkdata.py
-platform = espressif8266@2.2.2
+platform = espressif8266@2.2.3
 
 [env:la]
 build_flags = ${env.build_flags}
