include pio env name in version string timestamps in samples now reflects new time and not time before offset adjustment don't include the initial  first sample offset in estimated drift calculation SynchroClock version 1.1.10

--- a/SynchroClock/platformio.ini
+++ b/SynchroClock/platformio.ini
@@ -3,6 +3,10 @@ default_envs = la
 extra_configs =
   local.ini ; can be used for localized envs
 
+[version]
+base = 1.1.10
+info = $PIOENV
+
 [env]
 board = esp12e
 framework = arduino
@@ -11,6 +15,7 @@ upload_speed = 115200
 board_build.f_cpu = 80000000L
 board_build.f_flash = 40000000L
 board_build.flash_mode = qio
+src_build_flags = -DVERSION_INFO="${version.base}-${version.info}"
 build_flags =
   -Wall -Wextra -Werror
   -Wl,-Teagle.flash.4m1m.ld
