added a few comments and small debug fix

--- a/I2CAnalogClock/platformio.ini
+++ b/I2CAnalogClock/platformio.ini
@@ -1,7 +1,7 @@
 [platformio]
 default_envs = default
 extra_configs =
-  local.ini # can be used for localized envs
+  local.ini ; can be used for localized envs
 
 [env]
 board = attiny85
