--- a/SynchroClock/platformio.ini
+++ b/SynchroClock/platformio.ini
@@ -17,7 +17,7 @@ board_build.f_flash = 40000000L
 board_build.flash_mode = qio
 src_build_flags = -DVERSION_INFO="${version.base}-${version.info}"
 build_flags =
-  -Wall -Wextra -Werror
+  -Wall -Wextra
   -Wl,-Teagle.flash.4m1m.ld
   -DPIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY_LOW_FLASH
   -DBEARSSL_SSL_BASIC
@@ -31,7 +31,7 @@ lib_deps =
   https://github.com/tzapu/WiFiManager.git#e25277b
   https://github.com/arcao/Syslog.git#e9c2eea
 extra_scripts = post:mkdata.py
-platform = espressif8266@2.2.3
+platform = espressif8266@2.6.3
 
 [env:la]
 build_flags = ${env.build_flags}
